@@ -1,5 +1,5 @@
 python-dateutil
 sqlalchemy
 anyjson
-kombu>=0.9.1
+kombu>=1.0.0b4
 pyparsing>=1.5.0
